# CaMelShot

./: README.md  build.gradle  local.properties  settings.gradle
OpenCV/: build.gradle
OpenCV/libcxx_helper/: CMakeLists.txt  dummy.cpp
app/: build.gradle
app/src/androidTest/java/com/dhnns/opencv_test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/SSRL/CaMelShot/: CamActivity.java  MainActivity.java
app/src/main/java/com/dhnns/opencv_test/: CVFunc.java  MainActivity.java
app/src/main/java/com/tencent/yolov5ncnn/: CamActivity.java  MainActivity.java  OpenCV.java  YoloV5Ncnn.java
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  com_dhnns_opencv_test_CVFunc.h  pca.cpp  pca_test.cpp  yolov5ncnn_jni.cpp
app/src/main/jni/OpenCV/: pca_detect.cpp  pca_detect.cpp.adaptive
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/dhnns/opencv_test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle
sdk/java/src/org/opencv/android/: CameraBridgeViewBase.java
tflite/: build.gradle
tflite/src/androidTest/java/com/dhnns/tflite/: ExampleInstrumentedTest.java
tflite/src/main/: AndroidManifest.xml
tflite/src/main/cpp/: CMakeLists.txt  tflite.cpp
tflite/src/main/java/com/dhnns/tflite/: NativeLib.java
tflite/src/test/java/com/dhnns/tflite/: ExampleUnitTest.java
